welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: type mismatch;
 found   : Int(9)
 required: Boolean
	return 98/10}
                 ^